--- a/.classpath
+++ b/.classpath
@@ -21,8 +21,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/maxkuo/Desktop/資策會/小專題/TextEditor/jakarta.activation.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/maxkuo/Desktop/資策會/小專題/TextEditor/json-20220320.jar"/>
-	<classpathentry kind="lib" path="/Users/maxkuo/Desktop/資策會/小專題/TextEditor/activation-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
